@@ -127,7 +127,7 @@ define mkinitramfs
 endef
 
 define mkfs.ufs1
-  sh -c 'makefs -t ffs -s 30m -f 1000 -o minfree=0,version=1 $$0 ${TREE}'
+  sh -c 'makefs -t ffs -s 40m -f 1000 -o minfree=0,version=1 $$0 ${TREE}'
 endef
 
 define e2fsck
@@ -638,10 +638,13 @@ $(TEMP_INITRD): $(STAMPS)tree-$(targetstring)-stamp arch_tree
 		exit 1; \
 	fi
 
+ifeq ($(DEB_HOST_ARCH_OS),linux)
 	# Only build the font if we have installation-locale
 	if [ -d "$(LOCALE_PATH)/C.UTF-8" ] && [ -e /usr/src/unifont.bdf ]; then \
 		$(submake) $(TREE)/lib/unifont.bgf; \
 	fi
+endif
+
 	install -d $(TEMP)
 
 	case $(INITRD_FS) in \
