@@ -21,11 +21,8 @@ menuentry "Install Debian GNU/kFreeBSD 32 bits" {
 	echo "Loading ..."
 	set root=$cd
 	kfreebsd /boot/kernel/kfreebsd.gz
-	kfreebsd_module_elf /boot/kernel/acpi.ko
 	kfreebsd_module /boot/mfsroot.gz type=mfs_root
 	set kFreeBSD.vfs.root.mountfrom=ufs:/dev/md0
-	set kFreeBSD.hw.ata.ata_dma=0	# needed for qemu hard disk # TODO: delete
-	set kFreeBSD.hw.ata.atapi_dma=0	# needed for qemu cd # TODO: 1
 }
 
 menuentry "Boot from first hard disk" {
