@@ -2,8 +2,8 @@ MEDIUM_SUPPORTED = netboot
 MEDIUM_SUPPORTED_EXTRA = monolithic
 
 # The version of the kernel to use.
-KERNELVERSION = 7.2-1-amd64
-KERNELMAJOR = 7
+KERNELVERSION = 8.1-1-amd64
+KERNELMAJOR = 8
 KERNEL_FLAVOUR = di
 KERNELNAME = kfreebsd.gz
 KERNELIMAGEVERSION = $(KERNELVERSION)
