@@ -2,10 +2,10 @@ MEDIUM_SUPPORTED = netboot
 MEDIUM_SUPPORTED_EXTRA = monolithic
 
 # The version of the kernel to use.
-KERNELVERSION = 7.2-1-486
-KERNELMAJOR = 7
+KERNELVERSION = 8.1-1-486
+KERNELMAJOR = 8
 KERNEL_FLAVOUR = di
-KERNELNAME = kfreebsd.gz acpi.ko
+KERNELNAME = kfreebsd.gz
 KERNELIMAGEVERSION = $(KERNELVERSION)
 
 # GRUB configuration file
