@@ -16,6 +16,10 @@ debian-installer (201007xx) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Build-depends on debian-ports-archive-keyring on architectures
     hosted on debian-ports.org (sh4, sparc64).
+  * Increase default UFS size to 40MB.
+  * Switch kfreebsd-amd64 and kfreebsd-i386 to 8.1 kernel.
+  * Don't try to build unifont.bdf on GNU/kFreeBSD as the console already 
+    has basic font support for level 1 and bogl-bterm is not available.
 
   [ Joey Hess ]
   * Fix build breakage introduced by tighter version parsing in
